--- a/src/Widgets/Footer.module.css
+++ b/src/Widgets/Footer.module.css
@@ -1,11 +1,15 @@
 .footer {
   width: 100%;
+  box-shadow: 0px -2px 2px;
+  box-sizing: border-box;
 }
 .container {
   max-width: 60rem;
   text-align: center;
   margin: auto;
   list-style: none;
+  height: 80px;
+  line-height: 80px;
 }
 .container li {
   display: inline-block;
