--- a/src/Widgets/Header.module.css
+++ b/src/Widgets/Header.module.css
@@ -2,10 +2,10 @@
   --nav-size: 50px;
 }
 .header {
-  width: 100vw;
-  height: 100px;
+  height: 80px;
   text-align: center;
   padding-top: 20px;
+  box-shadow: 0px 2px 2px;
 }
 .nav {
   max-width: 60rem;
