--- a/src/Widgets/Footer.module.css
+++ b/src/Widgets/Footer.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   box-shadow: 0px -2px 8px;
   box-sizing: border-box;
+  font-family: "Chilanka";
 }
 .container {
   max-width: 60rem;
