--- a/src/Widgets/Header.module.css
+++ b/src/Widgets/Header.module.css
@@ -6,6 +6,7 @@
   text-align: center;
   padding-top: 20px;
   box-shadow: 0px 2px 8px;
+  font-family: "monospace";
 }
 .nav {
   max-width: 60rem;
