--- a/src/Pages/Footer.module.css
+++ b/src/Pages/Footer.module.css
@@ -3,6 +3,15 @@
   box-shadow: 0px -2px 8px;
   box-sizing: border-box;
   font-family: "Chilanka";
+  background-color: var(--color-surface);
+  position: fixed;
+  bottom: 0px;
+}
+
+@media screen and (max-height: 600px) {
+  .footer {
+    position: static;
+  }
 }
 .container {
   max-width: 60rem;
