--- a/src/Pages/Header.module.css
+++ b/src/Pages/Header.module.css
@@ -7,13 +7,12 @@
   padding-top: 20px;
   box-shadow: 0px 2px 8px;
   font-family: "monospace";
+  min-width: 540px;
 }
 .nav {
   max-width: 60rem;
-  /* width: 500px; */
   line-height: 40px;
   height: 40px;
-  /* display: ; */
   margin: auto;
   text-align: left;
 }
