--- a/src/Pages/Contact.module.css
+++ b/src/Pages/Contact.module.css
@@ -1,5 +1,11 @@
 .container {
   max-width: 60rem;
-  margin: 0px auto 50px auto;
+  margin: 0px auto 120px auto;
   min-height: 50vh;
+}
+
+@media screen and (max-height: 600px) {
+  .container {
+    margin-bottom: 40px;
+  }
 }
