--- a/src/Pages/Error.module.css
+++ b/src/Pages/Error.module.css
@@ -3,8 +3,14 @@
 }
 .container {
   max-width: 60rem;
-  margin: 0px auto 50px auto;
+  margin: 0px auto 120px auto;
 }
+@media screen and (max-height: 600px) {
+  .container {
+      margin-bottom: 40px;
+  }
+}
+
 .error h1 {
   font-size: 4rem;
 }
