--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
   color: var(--color-solid);
   position: relative;
   box-sizing: border-box;
+  width: fit-content;
 }
 .clickable.selected,
 .clickable:focus {
