--- a/src/Pages/Header.module.css
+++ b/src/Pages/Header.module.css
@@ -6,7 +6,7 @@
   text-align: center;
   padding-top: 20px;
   box-shadow: 0px 2px 8px;
-  font-family: "monospace";
+  font-family: monospace, "Courier New", "Courier New";
   min-width: 540px;
 }
 .nav {
