Add tabindex to make clickable content accessible

--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,10 @@
   box-sizing: border-box;
   width: fit-content;
 }
-.clickable.selected,
+/* .clickable.selected,
 .clickable:focus {
   color: var(--color-solid);
-}
+} */
 .clickable:after {
   content: "";
   position: absolute;
