--- a/src/Pages/About.module.css
+++ b/src/Pages/About.module.css
@@ -1,7 +1,17 @@
-.container {
+.about {
   max-width: 60rem;
   margin: 0px auto 120px auto;
   min-height: 50vh;
+}
+.about img {
+  width: 100%;
+}
+.about p {
+  font-size: 2rem;
+}
+.about a {
+  font-size: 1.5rem;
+  color: var(--color-decorated);
 }
 
 @media screen and (max-height: 600px) {
