Improve accessibility for dropdown box

--- a/src/Widgets/DropDown.module.css
+++ b/src/Widgets/DropDown.module.css
@@ -21,7 +21,7 @@
   opacity: 0;
   transition: all 0.4s;
 }
-.dropDown:focus .contentContainer,
+.dropDown:focus-within .contentContainer,
 .dropDown:hover .contentContainer {
   transform: scaleY(1);
   opacity: 1;
