--- a/src/Pages/AllCategories.module.css
+++ b/src/Pages/AllCategories.module.css
@@ -5,17 +5,18 @@
 }
 .allCategories {
     max-width: 60rem;
-    margin: 0px auto 50px auto;
+    margin: 0px auto 120px auto;
     min-height: 50vh;
 }
+@media screen and (max-height: 600px) {
+    .allCategories {
+        margin-bottom: 40px;
+    }
+}
+
 .picbox{
     height:188px;
     width:100%;
-}
-
-.dessertbox{
-    height:188px;
-    width:100%px;
 }
 
 .subbox{
