--- a/src/Pages/Contact.module.css
+++ b/src/Pages/Contact.module.css
@@ -1,11 +1,27 @@
-.container {
+.contact {
   max-width: 60rem;
   margin: 0px auto 120px auto;
   min-height: 50vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.container {
 }
 
 @media screen and (max-height: 600px) {
   .container {
     margin-bottom: 40px;
   }
+}
+.formContainer {
+  /* display: grid;
+  grid-template-columns: 1fr 5fr; */
+}
+.label {
+  display: block;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+.input {
+  display: block;
 }
