--- a/src/Pages/Search.module.css
+++ b/src/Pages/Search.module.css
@@ -1,10 +1,13 @@
 .search {
   margin-top: 30px;
-}
-.container {
   max-width: 60rem;
   margin: 0px auto 120px auto;
   min-height: 50vh;
+}
+.container {
+  /* max-width: 60rem;
+  margin: 0px auto 120px auto;
+  min-height: 50vh; */
 }
 @media screen and (max-height: 600px) {
   .container {
