--- a/src/Pages/Contact.module.css
+++ b/src/Pages/Contact.module.css
@@ -2,10 +2,10 @@
   max-width: 60rem;
   margin: 0px auto 120px auto;
   min-height: 50vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 @media screen and (max-height: 600px) {
@@ -21,7 +21,29 @@
   display: block;
   font-size: 1.4rem;
   font-weight: bold;
+  margin-bottom: 20px;
 }
 .input {
   display: block;
+  border: 1px solid var(--color-minor);
+  border-radius: 5px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.4rem;
+  padding: 0px 10px;
+  margin-bottom: 20px;
+  min-width: 350px;
+  box-sizing: border-box;
+}
+.contact .mailto {
+  color: var(--color-decorated);
+  font-size: 1.2rem;
+}
+.textArea {
+  display: block;
+  resize: none;
+  min-width: 350px;
+  box-sizing: border-box;
+  border: 1px solid var(--color-minor);
+  border-radius: 5px;
 }
