--- a/src/Pages/Contact.module.css
+++ b/src/Pages/Contact.module.css
@@ -2,6 +2,8 @@
   max-width: 60rem;
   margin: 0px auto 120px auto;
   min-height: 50vh;
+  --gap: 20px;
+  --min-width: 350px;
 }
 .container {
   display: grid;
@@ -18,21 +20,21 @@
   grid-template-columns: 1fr 5fr; */
 }
 .label {
-  display: block;
+  /* display: inline-block; */
   font-size: 1.4rem;
   font-weight: bold;
-  margin-bottom: 20px;
+  /* margin-top: var(--gap);
+  margin-bottom: var(--gap); */
 }
 .input {
   display: block;
-  border: 1px solid var(--color-minor);
+  border: 2px solid var(--color-minor);
   border-radius: 5px;
   height: 40px;
   line-height: 40px;
-  font-size: 1.4rem;
-  padding: 0px 10px;
-  margin-bottom: 20px;
-  min-width: 350px;
+  font-size: 1.2rem;
+  padding: 0px 40px 0px 10px;
+  width: var(--min-width);
   box-sizing: border-box;
 }
 .contact .mailto {
@@ -42,8 +44,49 @@
 .textArea {
   display: block;
   resize: none;
-  min-width: 350px;
+  width: var(--min-width);
   box-sizing: border-box;
-  border: 1px solid var(--color-minor);
+  border: 2px solid var(--color-minor);
   border-radius: 5px;
+  padding: 0px 40px 0px 10px;
+}
+.submitButton {
+  margin-top: var(--gap);
+  height: 50px;
+  line-height: 50px;
+  font-size: 1rem;
+  padding: 0px 10px;
+}
+.hiddenError {
+  visibility: hidden;
+}
+.error {
+  visibility: visible;
+  position: relative;
+  width: fit-content;
+}
+.error .input {
+  border: 2px solid var(--color-striking);
+}
+.error .textArea {
+  border: 2px solid var(--color-striking);
+}
+.error:after {
+  content: "!";
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  background-color: var(--color-striking);
+  color: var(--color-surface);
+  border: 1px solid var(--color-striking);
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.errorText {
+  font-size: smaller;
+  margin: 0px 0px 10px 0px;
+  color: var(--color-striking);
 }
