--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -9,8 +9,8 @@
     }
 }
 .pic{
-    height: 400px;
-    width: 900px;
+    height: 500px;
+    width: 850px;
     max-width: 100%;
     max-height: 100%;
     margin-top: 20px;
@@ -19,13 +19,20 @@
 .title{
     font-size: 1.8rem;
     font-weight: bold;
-    border: solid rgb(196, 191, 191);
-    border-radius: 30%;
-    background: rgba(154, 154, 241, 0.575);
+    color: var(--color-surface);
+    padding: 30px 70px 10px 70px;
+    border: solid var(--color-minor);
+    background: var(--color-decorated);
     font-family: cursive;
-    height: 100px;
-    width: 350px;
+    height: 80px;
+    width: 530px;
     display: inline-block;
+    
+    
+}
+.txt{
+    text-align: center;
+    margin-top: -45px;
 }
 .text{
     text-align: center;
@@ -33,8 +40,9 @@
 .just{
     
     width: fit-content;
-    border-bottom: 10px orange solid;
+    border-bottom: 10px solid var(--color-decorated);
     display:inline-block;
+    
 }
 .grid{
     display: grid;
@@ -42,8 +50,7 @@
     gap: 50px;
 }
 .gri{
-    border: 1px solid black;
-    height: auto;
+    border: 1px solid var(--color-minor);
     width: 212px;
 }
 .image{
@@ -52,8 +59,11 @@
 }
 .word{
     height:80px;
-    margin-top:10px;
+    margin: 20px 0 -10px 0;
     font-size: 1rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
     
 }
+
+
