Change title color on allCategories and Category page

--- a/src/Pages/AllCategories.module.css
+++ b/src/Pages/AllCategories.module.css
@@ -17,6 +17,7 @@
 .picbox{
     height:188px;
     width:100%;
+    cursor:pointer;
 }
 
 .subbox{
@@ -46,8 +47,9 @@
     text-overflow: ellipsis;
 }
 
-.title{
+.allCategories .title{
     font-size: 40px;
     margin-top: 20px;
     margin-bottom: 20px;
+    color: var(--color-decorated);
 }
