--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   color: var(--color-surface);
   border-color: var(--color-surface);
 }
-.blur .container {
+.showPopup {
   filter: var(--filter-blur);
 }
 
