--- a/src/Pages/Detail.module.css
+++ b/src/Pages/Detail.module.css
@@ -1,9 +1,48 @@
 .container{
-	padding:20px;
-	margin-left:20px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 10px;
+	grid-row-gap:10px;
+	margin:20px;
+	padding:5px;
 }
 
-.topleft{
-	
+
+.topleft {
+  margin:20px;
+}
+.topleft h1{
+  font-size: 1.8rem;
+}
+.topleft h2{
+  font-size: 1.2rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
+
+@media (max-width: 370px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}
+/*@media (min-width: 370px) {
+  .container {
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+}*/
+@media (min-width: 840px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 20px;
+    font-size: 1.1rem;
+  }
+}
+
+
+
+
