--- a/src/Pages/Login.module.css
+++ b/src/Pages/Login.module.css
@@ -5,7 +5,7 @@
 }
 .container {
   width: 300px;
-  margin: 120px auto 0px auto;
+  margin: 60px auto 0px auto;
 }
 
 .signin {
@@ -13,16 +13,19 @@
   color: var(--color-decorated);
 }
 
-.login .createButton {
+.login .anotherButton {
   font-size: 1rem;
   width: 100%;
   padding: 0px 10px;
   height: 50px;
   line-height: 50px;
-  margin-top: 20px;
+  margin-top: px;
 }
 .error {
   height: 40px;
   line-height: 40px;
   color: var(--color-striking);
+}
+.label {
+  margin: 20px 0px 10px 0px;
 }
