--- a/src/Pages/Detail.module.css
+++ b/src/Pages/Detail.module.css
@@ -44,5 +44,9 @@
 }
 
 
-
-
+/**********************TO ADD*******/
+.clickable {
+  color: var(--color-decorated);
+  cursor: pointer;
+}
+/*********************************/
