--- a/src/Pages/AllCategories.module.css
+++ b/src/Pages/AllCategories.module.css
@@ -53,3 +53,110 @@
     margin-bottom: 20px;
     color: var(--color-decorated);
 }
+
+@media(max-width:414px){
+    .box{  
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 3rem;
+    }
+    
+    .header2{
+        font-size: 30px;
+    }
+    
+    .divbox{
+        display:inline-block;
+        text-align:center;
+    }
+    
+    .picbox{
+        height: unset;
+        width: 330px;
+    }
+
+    .allCategories{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+
+}
+
+@media(min-width:414px) and (max-width:490px){
+    .box{  
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 3rem;
+    }
+    .divbox{
+        display:inline-block;
+        text-align:center;
+    }
+    .picbox{
+        height: unset;
+        width: 350px;
+    }
+    .allCategories{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .header2{
+        font-size:30px;
+    }
+
+}
+
+@media(min-width:490px) and (max-width:640px){
+    .box{  
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 3rem;
+    }
+    .divbox{
+        display:inline-block;
+        text-align:center;
+    }
+    .picbox{
+        height: unset;
+        width: 450px;
+    }
+    .allCategories{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .subtitle{
+        font-size: 20px;
+    }
+    .header2{
+        font-size: 35px;
+    }
+}
+
+@media(min-width:640px) and (max-width:740px){
+    .box{  
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+        row-gap: 3rem;
+    }
+    .allCategories{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .subtitle{
+        font-size:1.0em;
+    }
+}
+@media(min-width:740px) and (max-width:1100px){
+    .box{  
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+        row-gap: 3rem;
+    }
+    .allCategories{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
