--- a/src/Pages/Category.module.css
+++ b/src/Pages/Category.module.css
@@ -1,20 +1,25 @@
 .playSign {
     margin-top: 20px;
     width: 30px;
+    justify-self: center;
 }
 
 .pic{
-    width: 200px;
-    height: 150px;
+    max-width: 200px;
+    max-height: 150px;
     justify-self: center;
 }
 .picBox{
     text-align: center;
     margin-top:10px;
 }
+.signbox{
+    justify-self: center;
+}
+
 
 .picDessert{
-    width: 600px;
+    width: auto;
     height: 200px;
 }
 
@@ -30,9 +35,11 @@
 }
 .itemBox{
     display:grid;
-    grid-template-columns: 19rem 5rem 30rem;
     margin-top: 20px;
+    grid-template-columns: 2fr 1fr 5fr;
     cursor: pointer;
+}
+.textContainer {
 }
 
 .title{
@@ -49,4 +56,53 @@
 .text{
     padding-top: 25px;
     font-size: 15px;
+}
+@media(min-width:414px) and (max-width:510px) {
+    .picDessert{
+        width: 410px;
+        height: auto;
+    }
+}
+
+@media(min-width:510px) and (max-width:600px){
+    .picDessert{
+        width: 480px;
+        height: auto;
+    }
+}
+@media(max-width:414px){
+    .playSign {
+        grid-area: b;
+    }
+    
+    .pic{
+        max-width:200px;
+        grid-area: a;
+    }
+
+    .textContainer {
+        grid-area: c;
+    }
+
+    .itemBox{
+        grid-template-areas: "a b"
+                              "c c";
+        grid-template-columns: 3fr 1fr;
+    }
+
+    .category{
+        padding:0px 20px;
+    }
+    .signbox{
+        align-self: center;
+    }
+    .picDessert{
+        width: 370px;
+        height: auto;
+    }
+    .text{
+        padding-top: 0px;
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
 }
