--- a/src/Pages/Error.module.css
+++ b/src/Pages/Error.module.css
@@ -15,7 +15,7 @@
   font-size: 4em;
 }
 .error p {
-  font-size: 2em;
+  font-size: 1.8em;
 }
 .error a {
   color: var(--color-decorated);
@@ -34,15 +34,46 @@
   max-width: 500px;
 }
 
-@media(max-width:414px){
-  .gap{
-    display:none;
+@media(min-width:700px) and (max-width:1010px){
+  .container {
+    padding: 0px 20px;
   }
+
+  .error{
+    font-size: 11px;
+  }
+  .image{
+    max-width: 320px;
+  }
+
+
+}
+@media (max-width:700px){
+  .container {
+    padding: 0px 20px;
+  }
+
+  .error{
+    font-size: 10px;
+  }
+
+  .image{
+    max-width: 240px;
+    height: auto;
+  }
+  
+  .gap {
+    height: 0px;
+  }
+
+  
+
+}
+@media(max-width:414px){
   .miss{
     display:none;
   }
   .error{
-    padding:0px 20px;
     font-size: 9px;
   }
   .imageContainer {
