--- a/src/Pages/Detail.module.css
+++ b/src/Pages/Detail.module.css
@@ -1,11 +1,19 @@
+
+
 .container{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-column-gap: 10px;
-	grid-row-gap:10px;
-	margin:20px;
-	padding:5px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap:10px;
+  margin:20px;
+  padding:5px;
 }
+
+.clickable {
+  color: var(--color-decorated);
+  cursor: pointer;
+}
+
 
 
 .topleft {
@@ -19,62 +27,138 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
-
-.imageWrapper {
-  margin:20px;
-  width:400px;
-  height:300px;
+.topleft span{
+  color:var(--color-decorated);
 }
 
-.videoWrapper{
-  margin:20px;
-  width : 500px;
-  height : 400px;
+.sectionTitle{
+  color:var(--color-decorated);
 }
 
-@media screen and (max-width: 370px) {
+
+/*1 breakpoint*/
+@media screen and (max-width: 414px) {
+.wholePage{
+  margin: 0px 30px 120px 30px;
+}
   .container {
     grid-template-columns: 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
+    margin:10px;
+
   }
+.topleft{
+  margin:0;
+}
 
 .imageWrapper{
   width:300px;
   height:200px;
 }
-.videoWrapper{
-  width : 300px;
-  height : 200px;
-  position: relative;
+
+
+.directions li{
+  margin:5px;
 }
 
+.ingredients li{
+  margin:5px;
 }
-/*@media (min-width: 370px) {
+
+.videoWrapper{
+  max-width : 414px;
+  height: 300px;
+  position: relative;
+  margin: 20px auto 20px auto;
+
+}
+}
+
+/*2 breakpoint*/
+@media (min-width: 540px) {
+.wholePage{
+  margin: 0px 80px 120px 80px;
+}
   .container {
-    grid-template-columns: repeat(2,1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-template-columns: 25rem 35rem;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+
   }
-}*/
-@media (min-width: 840px) {
+
+.directions li{
+  margin:6px;
+}
+
+.ingredients li{
+  margin:6px;
+}
+
+.imageWrapper {
+  margin:20px;
+  width:500px;
+  height:400px;
+}
+.videoWrapper{
+  max-width : 540px;
+  height: 400px;
+  position: relative;
+}
+}
+/*3 breakpoint*/
+@media (min-width: 640px) {
+
+.wholePage{
+  margin: 0px 100px 120px 100px;
+}
   .container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+
+  }
+
+  .directions li{
+  margin:8px;
+}
+
+.ingredients li{
+  margin:8px;
+}
+.imageWrapper {
+  margin:20px;
+  width:600px;
+  height:400px;
+}
+}
+
+/*4 breakpoint*/
+@media (min-width: 840px) {
+
+.wholePage{
+  margin: 0px 200px 120px 200px;
+}
+  .container {
+    grid-template-columns: 1fr 1fr;
     grid-column-gap: 30px;
     grid-row-gap: 20px;
     font-size: 1.1rem;
+
   }
 
 .imageWrapper{
-  width:500px;
-  height:350px;
+  width:700px;
+  height:450px;
+}
+
+.directions li{
+  margin:10px;
+}
+
+.ingredients li{
+  margin:10px;
+}
 }
 
 
-}
-
-
-.clickable {
-  color: var(--color-decorated);
-  cursor: pointer;
-}
